# CQtDeployer

./: .buildconfig  .gitignore  .gitmodules  CDQ.pro  CMakeLists.txt  CONTRIBUTING.md  CQtDeployer.pro  CQtDeployerWinBuild.pri  Doxyfile  README.md  README.rst  SECURITY.md  deploy.pri  doxygen.conf  doxygen.conf.in  install.pri  plug.pro  sharedBuild.bat  sharedBuild.sh  sharedBuildCrossWin.sh  sharedBuildCrossWin64.sh  snapBuild.sh  staticBuild.sh  staticBuildCrossWin.sh  staticBuildCrossWin32.sh  staticBuildCrossWin64.sh  test.pri
CDQ/: CDQ.pro  (+3 more)
src/CQtDeployer/: CMakeLists.txt  main.cpp
src/CQtDeployer/Deploy/: CQtDeployer.json  CQtDeployer.json.in  CQtDeployerSingle.json.in  QIFW.py  snapcraft.yaml.in
src/CQtDeployer/Deploy/snap/: cqt.sh
src/CQtDeployer/languages/: de.ts  zh.ts
src/Deploy/: CMakeLists.txt  CQtDeployer.qrc
src/Deploy/src/: DeployResources.qrc  configparser.cpp  configparser.h  defines.h  dependenciesscanner.cpp  dependenciesscanner.h  dependencymap.cpp  dependencymap.h  deploy.cpp  deploy.h  deploy_global.h.in  deployconfig.cpp  deployconfig.h  deploycore.cpp  deploycore.h  distromodule.cpp  distromodule.h  distrostruct.cpp  distrostruct.h  elf_type.cpp  elf_type.h  envirement.cpp  envirement.h  extra.cpp  extra.h  extracter.cpp  extracter.h  filemanager.cpp  filemanager.h  generalfiles_type.cpp  generalfiles_type.h  igetlibinfo.h  ignorerule.cpp  ignorerule.h  iqml.cpp  iqml.h  libinfo.cpp  libinfo.h  metafilemanager.cpp  metafilemanager.h  (+23 more)
src/LibDeploy/: CMakeLists.txt
src/LibDeploy/src/: configparser.cpp  configparser.h  deploy.cpp  deployconfig.cpp  deploycore.cpp  distromodule.h  distrostruct.h  elf_type.h  extracter.cpp  filemanager.cpp  pluginsparser.cpp  qml.cpp  qml.h  targetdata.h  zipcompresser.cpp  zipcompresser.h
src/QtELFReader/: CMakeLists.txt
src/QtELFReader/src/: elfreader.cpp  elfreader.h  elfreader_global.h.in
testcases/: CMakeLists.txt
testcases/QMLFileDialog/: CMakeLists.txt  main.cpp  main.qml
testcases/TestOnlyC/: CMakeLists.txt  main.cpp
testcases/TestQMLWidgets/: CMakeLists.txt  HomeForm.ui.qml  Page1Form.ui.qml  Page2Form.ui.qml  main.qml  qml.qrc
testcases/TestQtWidgets/: CMakeLists.txt
testcases/quicknanobrowser/: ApplicationRoot.qml  BrowserWindow.qml  CMakeLists.txt  DownloadView.qml  FindBar.qml  FullScreenNotification.qml  main.cpp  resources.qrc  utils.h
testcases/virtualkeyboard/: .prev_CMakeLists.txt  CMakeLists.txt  basic-b2qt.qml  basic.pro  main.cpp
testcases/virtualkeyboard/basic/: Basic.qml  CMakeLists.txt  demo.qrc
testcases/virtualkeyboard/content/: AutoScroller.qml  HandwritingModeButton.qml  TextArea.qml  TextField.qml
testcases/webui/: CMakeLists.txt  about.html  main.cpp  webui.qrc  webuihandler.cpp  webuihandler.h
tests/: CMakeLists.txt  res.qrc  tstMain.cpp
tests/TestOnlyC/: TestOnlyC.pro
tests/TestQMLWidgets/: HomeForm.ui.qml  Page1Form.ui.qml  TestQMLWidgets.pro  main.cpp  qml.qrc
tests/TestQtWidgets/: TestQtWidgets.pro  main.cpp
tests/examples/TestCPPOnly/: CMakeLists.txt  main.cpp
tests/examples/TestOnlyC/: CMakeLists.txt
tests/examples/TestQMLWidgets/: CMakeLists.txt  Page2Form.ui.qml  main.cpp
tests/examples/TestQtWidgets/: CMakeLists.txt  qt.conf
tests/examples/quicknanobrowser/: BrowserDialog.qml  CMakeLists.txt
tests/examples/virtualkeyboard/: CMakeLists.txt  virtualkeyboard.pro
tests/examples/webui/: CMakeLists.txt  webui.pro
tests/modules/: modulesqt513.cpp  modulesqt513.h  modulesqt514.cpp  modulesqt514.h  modulesqt515.cpp  modulesqt515.h  modulesqt5152.cpp  modulesqt5152.h  modulesqt6_11.cpp  modulesqt6_11.h  modulesqt6_3.cpp  modulesqt6_3.h  modulesqt6_4.cpp  modulesqt6_4.h  modulesqt6_5.cpp  modulesqt6_5.h  modulesqt6_6.cpp  modulesqt6_6.h  modulesqt6_8.cpp  modulesqt6_8.h
tests/quicknanobrowser/: ApplicationRoot.qml  BrowserDialog.qml  BrowserWindow.qml  DownloadView.qml  FullScreenNotification.qml  main.cpp  quicknanobrowser.pro  resources.qrc  utils.h
tests/testRes/: TestQMLWidgets.sh  TestTr.qm  customRunScript.sh  debugLibData
tests/testRes/QIFCustomTemplate/: customconfig.xml
tests/testRes/Unix/: lib.so.1
tests/testRes/qml/: SceneQt6
tests/units/: MSVCtest.h  checkqttest.cpp  confifiletest.cpp  confifiletest.h  customplatformtest.cpp  dependencymaptest.cpp  deploygeneralfilestest.h  deploytest.cpp  deploytest.h  disablerunscripttest.cpp  distrostructtest.cpp  emptypackagestest.cpp  extractlibtest.cpp  extradatatest.cpp  extradatatest.h  extrapluginstest.cpp  iconstest.cpp  ignoreenvtest.cpp  ignoreenvwithlibdirtest.h  ignoretest.cpp  installdiroptionstest.cpp  installdiroptionstest.h  libcreator.h  libdirstest.cpp  md5test.cpp  modules.cpp  modules.h  outdirtest.cpp  overridingtemplatedebtest.cpp  overridingtemplatedebtest.h  overridingtemplateqifwtest.cpp  overridingtemplateqifwtest.h  packagestest.cpp  pathutilstest.cpp  prefixtest.cpp  prefixtest.h  qifwachiveformattest.cpp  qifwachiveformattest.h  qifwbinarycreatortest.cpp  qifwbinarycreatortest.h  (+26 more)
tests/units/linux/: QIFWtest.cpp  QIFWtest.h  QIFWtestcustom.cpp  QIFWtestcustom.h  QIFWtestmulti.cpp  QIFWtestmulti.h  allowemptypackagestest.cpp  allowemptypackagestest.h  binprefixtest.cpp  binprefixtest.h  checkqttest.cpp  checkqttest.h  cleartest.cpp  cleartest.h  confifiletest.cpp  confifiletest.h  customplatformtest.cpp  customplatformtest.h  customscripttest.cpp  customscripttest.h  customtest.cpp  customtest.h  debcustomtest.cpp  debcustomtest.h  debmultitest.cpp  debmultitest.h  debtest.cpp  debtest.h  dependencymaptest.cpp  dependencymaptest.h  deploygeneralfilestest.cpp  deploygeneralfilestest.h  deploytargettest.cpp  deploytargettest.h  disablerunscripttest.cpp  disablerunscripttest.h  disableshortcutstest.cpp  disableshortcutstest.h  distrostructtest.cpp  distrostructtest.h  (+88 more)
tests/units/win/: MSVCtest.cpp  MSVCtest.h
tests/virtualkeyboard/: virtualkeyboard.pro
tests/virtualkeyboard/basic/: Basic.qml  basic-b2qt.qml  basic.pro  demo.qrc  main.cpp
tests/webui/: .qmake.stash  about.html  main.cpp  webui.pro  webui.qrc  webuihandler.cpp  webuihandler.h
(+316 files in other folders)
